# vit-plasticity

./: .gitignore  README.md  pyproject.toml
apps/ablation/: dinov3.py  gpt2.py  mae.py
apps/ablation/scripts/: dinov3.sh  gpt2.sh  mae.sh
apps/plots/: ablation.py  ablation_adam.py  ablation_analysis.py  ablation_components.py  ablation_lipschitz.py  ablation_model_size.py  analysis.py  finetuning.py  loss_landscape.py  theory.py
apps/vit/: analysis.py  eval.py  eval_lora.py  linear_probing.py  train.py  train_lora.py  utils.py
apps/vit/configs/: cifar100ld.yaml  cifar10ld_c.yaml  domainld.yaml  linear_probing.yaml  ptld.yaml
apps/vit/scripts/: analysis.sh  eval.sh  finetuning.sh  linear_probing.sh
apps/vit/scripts/ablation/: adam.sh  components.sh  eval_adam.sh  eval_components.sh  eval_ld.sh  eval_lora.sh  eval_model_size.sh  finetuning_ld.sh  lora.sh  model_size.sh
src/vitef/: config.py  distributed.py  optim.py  utils.py
src/vitef/data/: __init__.py
src/vitef/data/images/: cifar10.py  cifar100.py  cifar100_c.py  cifar100ld.py  cifar10_c.py  cifar10ld_c.py  domainnet.py  domainnetld.py  flowers102.py  imagenet.py  imagenet_c.py  pet.py  petld.py  utils.py
src/vitef/models/: __init__.py  gpt2.py  patchtst.py  utils.py  vit.py
src/vitef/models/transformer/: architecture.py  utils.py
src/vitef/monitor/: checkpoint.py  logger.py  orchestrator.py  utility.py
